# mancala

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  __init__.py  mancala.py  mancala_gtk.py  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-09-mancala-engine-cli.md
docs/superpowers/specs/: 2026-07-09-mancala-resurrection-design.md
games/: __init__.py  kalah.py  mgame.py  oware.py
src/mancala/: __init__.py  cli.py  events.py  match.py  players.py  rules.py  save.py  state.py  strategies.py
src/mancala/variants/: __init__.py  _common.py  kalah.py  oware.py
tests/: conftest.py  helpers.py  test_cli.py  test_core_types.py  test_full_games.py  test_kalah.py  test_match.py  test_oware.py  test_package.py  test_players.py  test_properties.py  test_registry.py  test_save.py  test_state.py  test_strategies.py
uis/: mancala.glade
