[project]
name = "mancala"
version = "0.1.0"
description = "Mancala family board games: engine and terminal interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mancala = "mancala.cli:main"

[tool.ruff]
line-length = 88
unsafe-fixes = true
show-fixes = true

[tool.ruff.lint]
select = [
    "ARG",     # flake8-unused-arguments
    "B",       # flake8-bugbear
    "E",       # pycodestyle Error
    "F",       # Pyflakes
    "I",       # isort
    "PLC0415", # import-outside-top-level (Pylint)
    "PT",      # flake8-pytest-style
    "T10",     # flake8-debugger
    "RUF",     # ruff-specific rules
    "SIM",     # flake8-simplify
    "UP",      # pyupgrade
    "W",       # pycodestyle Warning
]

[tool.ruff.lint.flake8-bugbear]
# frozenset() as a default argument (Rules.apply_move) is immutable and safe.
extend-immutable-calls = ["frozenset"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.156.4",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.57",
]

[tool.coverage.run]
branch = true
source = ["mancala", "tests"]

[tool.coverage.report]
fail_under = 100
show_missing = true
